--- a/user.tmpl
+++ b/user.tmpl
@@ -1,14 +1,39 @@
-<div class="user_item">
-    <!-- <p>!id!</p> --!>
-    <p>!slogan!</p>
-    <p>!shop_name!</p>
-    <p>職種:!job!</p>
-    <p>最寄り駅:!station!</p>
-    <p>時給:!hourly!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<form action="user.php" method="post">
-    <input type="submit" value="★">
-    <input type="hidden" name="mode" value="fav">
-</form>
+    <link rel="stylesheet" href="style.css">
+    <title>athome求人</title>
 
-</div>
+    <style>
+        .user_item{
+            width:30%;
+            border: #d7d7d7 solid 2px;
+            border-radius: 10px;
+            margin-bottom: 30px;
+            padding: 10px;
+        }
+
+        .user_item h1{
+            font-size: 18px;
+            font-weight: bold;
+        }
+    </style>
+
+    <body>
+        <div class="user_item">
+            <h1>!slogan!</h1>
+            <p>!shop_name!</p>
+            <p>職種:!job!</p>
+            <p>最寄り駅:!station!</p>
+            <p>時給:!hourly!</p>
+
+        <form action="user.php" method="get">
+            <input type="submit" value="★">
+            <input type="hidden" name="mode" value="fav">
+        </form>
+
+        </div>
+    </body>
