--- a/insert.tmpl
+++ b/insert.tmpl
@@ -4,35 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        tr{
-            border-top: #d7d7d7 3px solid;
-        }
-    </style>
+    
 </head>
 
 <body>
-    <tr>
-        <td>!id!</td>
-        <td>!shop_name!</td>
-        <td>!slogan!</td>
-        <td>!job!</td>
-        <td>!station!</td>
-        <td>!hourly!</td>
-        <td>
-            <form action="kanri.php" method="get">
-                <input type="submit" value="編集">
-                <input type="hidden" name="mode" value="edit">
-                <input type="hidden" name="id" value="!id!">
-            </form>
-        </td>
+    <div class="job_list">
+        <table>
+            <tr>
+                <td class="id">!id!</td>
+                <td class="shop_name">!shop_name!</td>
+                <td class="slogan">!slogan!</td>
+                <td class="job">!job!</td>
+                <td class="station">!station!</td>
+                <td class="hourly">!hourly!</td>
+                <td class="edit">
+                    <form action="edit.php" method="get">
+                        <input type="submit" value="編集">
+                        <input type="hidden" name="mode" value="edit">
+                        <input type="hidden" name="id" value="!id!">
+                    </form>
+                </td>
 
-        <td>
-            <form>
-                <input type="submit" value="削除">
-                <input type="hidden" name="mode" value="delete">
-                <input type="hidden" name="id" value="!id!">
-            </form>
-        </td>
-    </tr>
+                <td class="delete">
+                    <form>
+                        <input type="submit" value="削除">
+                        <input type="hidden" name="mode" value="delete">
+                        <input type="hidden" name="id" value="!id!">
+                    </form>
+                </td>
+            </tr>
+        </table>
+    </div>
 </body>
