--- a/user.tmpl
+++ b/user.tmpl
@@ -9,15 +9,27 @@
 
     <style>
         .user_item{
-            width:30%;
+            width:45%;
             border: #d7d7d7 solid 2px;
             border-radius: 10px;
-            margin-bottom: 30px;
-            padding: 10px;
+            
+            margin: 10px 0px 30px;
+            padding: 20px;
         }
 
         .user_item h1{
             font-size: 18px;
+            font-weight: bold;
+        }
+
+        .app{
+        }
+
+        .app a{
+            text-decoration: none;
+            color: black;
+            background-color: #d7d7d7;
+            padding: 5px;
             font-weight: bold;
         }
     </style>
@@ -36,6 +48,8 @@
             <input type="hidden" name="mode" value="fav">
         </form>
 --!>
+
+    <p class="app"><a href="form.html">申し込む</a></p>
 
         </div>
     </body>
