--- a/user.tmpl
+++ b/user.tmpl
@@ -12,7 +12,7 @@
             width:45%;
             border: #d7d7d7 solid 2px;
             border-radius: 10px;
-            
+            background-color: #fcfcfc;
             margin: 10px 0px 30px;
             padding: 20px;
         }
@@ -20,6 +20,7 @@
         .user_item h1{
             font-size: 18px;
             font-weight: bold;
+            border-bottom: 1px solid #d7d7d7;
         }
 
         .app{
@@ -37,10 +38,10 @@
     <body>
         <div class="user_item">
             <h1>!slogan!</h1>
-            <p>!shop_name!</p>
-            <p>職種:!job!</p>
-            <p>最寄り駅:!station!</p>
-            <p>時給:!hourly!</p>
+            <p>店名　　　:　!shop_name!</p>
+            <p>職種　　　:　!job!</p>
+            <p>最寄り駅　:　!station!</p>
+            <p>時給　　　:　!hourly!</p>
 
 <!--
         <form action="user.php" method="get">
